--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-# Project place file
-/roact-spring.rbxlx
-
-# Roblox Studio lock files
 /*.rbxlx.lock
 /*.rbxl.lock
 
-# Miscellaneous
 /packages
 /build
+/roblox.toml
