--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,7 +26,7 @@ jobs:
         run: npx moonwave build
 
       - name: Deploy docs
-        uses: JamesIves/github-pages-deploy-action@^4.2
+        uses: JamesIves/github-pages-deploy-action@4.2.2
         with:
           branch: gh-pages
           folder: build
