--- a/stories/wally.toml
+++ b/stories/wally.toml
@@ -1,7 +1,7 @@
 [package]
-name = "chriscerie/roact-spring"
-description = "A spring-physics based animation library for Roact inspired by react-spring"
-version = "0.0.7"
+name = "chriscerie/roact-spring-story"
+description = "Stories for react-spring"
+version = "0.0.6"
 license = "MIT"
 authors = ["chriscerie"]
 registry = "https://github.com/UpliftGames/wally-index"
@@ -10,4 +10,5 @@ include = ["default.project.json", "src"]
 
 [dependencies]
 Roact = "roblox/roact@^1"
+Hooks = "kampfkarren/roact-hooks@^0.3"
 Promise = "evaera/promise@^3.2"
