--- a/story.project.json
+++ b/story.project.json
@@ -4,7 +4,7 @@
 		"$className": "DataModel",
 		"ReplicatedStorage": {
             "Packages": {
-                "$path": "Packages",
+                "$path": "stories/Packages",
                 "RoactSpring": {
                     "$path": "src"
                 }
