Change constants.config to config

--- a/story.project.json
+++ b/story.project.json
@@ -1,5 +1,5 @@
 {
-	"name": "Roact-Spring-Story",
+	"name": "roact-spring-story",
 	"tree": {
 		"$className": "DataModel",
 		"ReplicatedStorage": {
