--- a/wally.toml
+++ b/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chriscerie/roact-spring"
 description = "A spring-physics based animation library for Roact inspired by react-spring"
-version = "0.0.11"
+version = "0.0.12"
 license = "MIT"
 authors = ["chriscerie"]
 registry = "https://github.com/UpliftGames/wally-index"
@@ -10,3 +10,4 @@ realm = "shared"
 [dependencies]
 Roact = "roblox/roact@^1"
 Promise = "evaera/promise@^3.2"
+Hooks = "kampfkarren/roact-hooks@^0.3"
