--- a/moonwave.toml
+++ b/moonwave.toml
@@ -14,15 +14,15 @@ includeReadme = false
 
 [[home.features]]
 title = "Declarative and imperative"
-description = "react-spring is the perfect bridge between declarative and imperative animations. It takes the best of both worlds and packs them into one flexible library."
+description = "roact-spring is the perfect bridge between declarative and imperative animations. It takes the best of both worlds and packs them into one flexible library."
 
 [[home.features]]
 title = "Fluid, powerful, painless"
-description = "react-spring is designed to make animations fluid, powerful, and painless to build and maintain. Animation becomes easy and approachable, and everything you do looks and feel natural by default."
+description = "roact-spring is designed to make animations fluid, powerful, and painless to build and maintain. Animation becomes easy and approachable, and everything you do looks and feel natural by default."
 
 [[home.features]]
 title = "Versatile"
-description = "react-spring works with most data types and provides extensible configurations that makes it painless to create advanced animations."
+description = "roact-spring works with most data types and provides extensible configurations that makes it painless to create advanced animations."
 
 [[footer.links]]
 title = "Docs"
