Add motivation in docs intro

--- a/moonwave.toml
+++ b/moonwave.toml
@@ -13,7 +13,7 @@ description = "roact-spring is the perfect bridge between declarative and impera
 
 [[home.features]]
 title = "Fluid, powerful, painless"
-description = "roact-spring is designed to make animations fluid, powerful, and painless to build and maintain. Animation becomes easy and approachable, and everything you do looks and feel natural by default."
+description = "roact-spring is designed to make animations fluid, powerful, and painless to build and maintain. Animation becomes easy and approachable, and everything you do look and feel natural by default."
 
 [[home.features]]
 title = "Versatile"
