--- a/roact.wally.toml
+++ b/roact.wally.toml
@@ -8,7 +8,6 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Roact = "roblox/roact@^1"
 Promise = "evaera/promise@^4.0"
-Hooks = "kampfkarren/roact-hooks@^0.4"
 TestEZ = "roblox/testez@^0.4"
+React ="roblox/roact@^1"
