--- a/package.json
+++ b/package.json
@@ -36,10 +36,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-roblox-ts": "^0.0.32",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
-  },
-  "peerDependencies": {
-    "@rbxts/roact": "^1.4.0-ts.2",
-    "@rbxts/roact-hooks": "^0.3.0-ts.2"
+    "typescript": "^4.5.5",
+    "@rbxts/roact": "*",
+    "@rbxts/roact-hooks": "*"
   }
 }
