--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/roact-spring",
-  "version": "1.1.3-ts.0",
+  "version": "1.1.3-ts.1",
   "description": "A modern spring-physics based animation library for Roact inspired by react-spring",
   "main": "src/init.lua",
   "typings": "src/index.d.ts",
@@ -25,6 +25,10 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "peerDependencies": {
+    "@rbxts/roact": "*",
+    "@rbxts/roact-hooks": "*"
   },
   "devDependencies": {
     "@rbxts/compiler-types": "^1.2.9-types.0",
